<resources>
    <string name="app_name">Social Chat</string>

    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="dont_have_an_account">Don\'t have an account? Register</string>

    <string name="chats">Chats</string>
    <string name="no_chats_available">No chats available</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="type_message">Message</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="pick_image">Pick an image</string>
    <string name="clear_image">Clear image</string>
    <string name="edit_username">Edit Username</string>
    <string name="save">Save</string>
    <string name="camera">Camera</string>
</resources>